--- a/langListingMonokai.tex
+++ b/langListingMonokai.tex
@@ -18,7 +18,7 @@
   stepnumber=1,                   		% the step between two line-numbers.        
   numbersep=5pt,                  		% how far the line-numbers are from the code
   extendedchars=true,
-  numberstyle=\tiny\color{black}\ttfamily,
+  numberstyle=\small\color{black}\ttfamily,
   backgroundcolor=\color{background},  		% choose the background color. You must add \usepackage{color}
   showspaces=false,               		% show spaces adding particular underscores
   showstringspaces=false,         		% underline spaces within strings
@@ -30,12 +30,12 @@
   breaklines=true,                		% sets automatic line breaking
   breakatwhitespace=true,         		% sets if automatic breaks should only happen at whitespace
   title=\lstname,                 		% show the filename of files included with \lstinputlisting;
-  basicstyle=\color{normal}\ttfamily,					% sets font style for the code
-  keywordstyle=\color{magenta}\ttfamily,	% sets color for keywords
-  stringstyle=\color{string}\ttfamily,		% sets color for strings
-  commentstyle=\color{comment}\ttfamily,	% sets color for comments
+  basicstyle=\color{normal}\small\ttfamily,					% sets font style for the code
+  keywordstyle=\color{magenta}\small\ttfamily,	% sets color for keywords
+  stringstyle=\color{string}\small\ttfamily,		% sets color for strings
+  commentstyle=\color{comment}\small\ttfamily,	% sets color for comments
   emph={True, False, format_string, eff_ana_bf, permute, eff_ana_btr},
-  emphstyle=\color{identifier}\ttfamily
+  emphstyle=\color{identifier}\small\ttfamily
 }
 
 \lstset{literate=%
