--- a/lec01/lec01.tex
+++ b/lec01/lec01.tex
@@ -225,22 +225,31 @@
     \item range(stop) (== range(0, stop))
     \item range(start, stop)
     \item range(start, start, step)
-    \item range is \alert{VERY} memory efficient, thanks to lazy evaluation.
+    \item range is memory efficient, thanks to lazy evaluation.
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Assignments}
+\begin{frame}{Practice}
   Input: a string. \\
   Check if the input string is a palindrome. Should ignore whitespace.
 \end{frame}
 
-\begin{frame}{Assignments}
+\begin{frame}{Practice}
   Input: a string. \\
   Print the number of words, and the word that comes last in
   alphabetical order.
 \end{frame}
 
-\begin{frame}{Assignments}
+\begin{frame}{Practice}
+  Input: a string containing two numbers, seperated by a space.
+  Print the 4$^{th}$ digit by
+  \begin{enumerate}
+    \item Without converting to str.
+    \item After converting to str.
+  \end{enumerate}
+\end{frame}
+
+\begin{frame}{Practice}
     \begin{tabular}{c c}
       90\ldots100 & A \\
       80\ldots89 & B \\
