--- a/hw2/ass02.tex
+++ b/hw2/ass02.tex
@@ -62,7 +62,7 @@ The \textit{i}-th line of next $N$ lines contains the four calorie value of each
 meal, $b_{i}, l_{i}, s_{i}, d_{i}$.
 
 \textit{OUTPUT}: Print \textbf{SUCCESS} if we can choose exactly 4 food so that
-the total of calorie equals 2,000,000.\\($b_{i}+l_{i}+s_{i}+d_{i} = 2,000,000$)
+the total of calorie equals 2,000,000.\\($b_{i}+l_{j}+s_{k}+d_{l} = 2,000,000$)
 Print \textbf{FAIL} elsewise.
 
 \textit{CONDITION}: $ 4 \le N \le 10,000$, $ 0 \le b,l,s,d \le 1,000,000$
