--- a/lec06/lec06.tex
+++ b/lec06/lec06.tex
@@ -63,19 +63,66 @@ We pass values to functions, get values, pass them to another function....
 
 \begin{frame}
 \frametitle{Creating Classes of our own}
-  Note, that you won't be using classes so much unless you write bigger
-  programs. So, for the pure fun of it, let's make a baseball game.
+  We don't usually use classes so much unless we start writing bigger programs.
+  The usual class tutorials force us to create boring exmaples.
+  We are going to make a simple baseball game.
 \end{frame}
 
-\begin{frame}{Dictionary}
-  Similar to a list, but instead of using \textit{int} as indices, we can use
-  arbitrary objects\footnote{those that are
-  \href{https://docs.python.org/2/glossary.html\#term-hashable}{hashable}}
-  as indices(or we call them keys)
+\begin{frame}{The basis}
+  There are two types of players in baseball.
+  The Pitcher, and the Batter. They are all players, with their names,
+  backnumbers, and team names.\\
+  The Pitcher has types of balls they can throw, their speed, and avg.\\
+  The batters have their hit rate, and speed.\\
+  We are going to code this data using classes.
+\end{frame}
 
-  Instead of comparing the key with every key it has, \textit{dictionary} does
-  it efficiently.
-  \footnote{\href{https://en.wikipedia.org/wiki/Collision_(computer_science)}{well, most of the time}}
+\begin{frame}{The Player Class}
+  This becomes the basis(or the superclass) of pitchers and batters.
+  Note that all methods are denoted by the $self$ keyword.
+\end{frame}
+
+\begin{frame}{The Pitcher Class}
+  The Pitcher class inherits property of the player, and have additional
+  parameters like yadada.
+\end{frame}
+
+\begin{frame}{The Batter Class}
+  The Pitcher class inherits property of the player, and have additional
+  parameters like yadada.
+\end{frame}
+
+\begin{frame}{Creating the Pitcher}
+  YAda
+\end{frame}
+
+\begin{frame}{Creating the Batters}
+  YAda
+\end{frame}
+
+\begin{frame}{The computer controls the pitcher}
+  pitcher.throw() $ball or strike$
+\end{frame}
+
+\begin{frame}{You control the batter}
+  If hit:
+    batter.hit()
+  else:
+    batter.stay()
+  return T or F
+  ball -> hit or strike -> hit.
+\end{frame}
+
+\begin{frame}{Printing the Result}
+  EasyPeasy
+\end{frame}
+
+\begin{frame}{Overiding functions}
+  Wondered how print([1,2,3]) -> [1,2,3] when print(3) -> 3?
+  We can override the __string__(self) (__ means its internal)method to specify
+  the format printed.
+  For pitcher, override __string__(self): I can throw a ball at 000 km/h.
+  print(pitcher)
 \end{frame}
 
 \begin{frame}{How?}
