--- a/lec07/lec07.tex
+++ b/lec07/lec07.tex
@@ -67,7 +67,8 @@ The children inherits every thing about its parent, and have some + extras.
 
 \begin{frame}{Explained}
   $min(lst), max(lst)$ takes time proprotional to N. Here, we keep track of min
-  and max so that it can be known regardless of size, when the list grows
+  and max so that it can be known regardless of size.(Of course, there is no
+  free lunch, there is extra cost of comparing at insert and append)
   \begin{lstinputlisting}[firstline=1, lastline=6]
   {./mylist.py}
   \end{lstinputlisting}
@@ -135,5 +136,10 @@ The children inherits every thing about its parent, and have some + extras.
 
 \begin{frame}{Next Week}
   Twitter Crawler
+\end{frame}
+
+\begin{frame}{Next Week}
+  If we have time, we do the prerequisites together.
+  Else, it's homework.
 \end{frame}
 \end{document}
