--- a/lec07/lec07.tex
+++ b/lec07/lec07.tex
@@ -137,6 +137,12 @@ The child inherits every thing about its parent, and $+\alpha$.
 \begin{frame}{Questions on homeworks?}
 \end{frame}
 
+\begin{frame}{Assignment}
+  Finish implementing myList using the composition version.
+  It should support $len(mylst), mylst[3]=2, and mylst.append()$, updating \_min
+  and \_max accordingly.
+\end{frame}
+
 \begin{frame}{For Next Week}
   \begin{center}
     Twitter Crawler
