--- a/lec01/lec01.tex
+++ b/lec01/lec01.tex
@@ -23,10 +23,23 @@
 
 \title{Python 101}
 \subtitle{Lec00 \\ Python and Primitive Data Types}
-\author{thoum}
 
 \begin{document}
 \frame{\titlepage}
+\begin{frame}
+\frametitle{Syllabus}
+\begin{enumerate}
+  \item Basic Data Types
+  \item Ifs and Fors
+  \item Functions
+  \item Data Structures
+  \item Classes and OOP*
+  \item Efficient Programming*
+  \item Project: Playing QWOP with Genetic Algorithm*
+  \item Project: Twitter Crawling*
+\end{enumerate}
+*Subject to Change
+\end{frame}
 
 \begin{frame}
 \frametitle{WHY Python?}
@@ -191,7 +204,7 @@
 
 \begin{frame}{Iterables}
   \textcolor{black}{\large{Possible Operations with Iterables}}
-  \begin{lstinputlisting}[firstline=5, lastline=18]
+  \begin{lstinputlisting}[firstline=1, lastline=16]
     {./iters.py}
   \end{lstinputlisting}
 \end{frame}
@@ -232,7 +245,14 @@
 \end{frame}
 
 \begin{frame}{Iterables}
-  \textcolor{black}{\large{Slciing}}
+  \textcolor{black}{\large{Subscription}}
+  \begin{lstinputlisting}
+    {./subscript.py}
+  \end{lstinputlisting}
+\end{frame}
+
+\begin{frame}{Iterables}
+  \textcolor{black}{\large{Slicing}}
   \begin{lstinputlisting}
     {./subs.py}
   \end{lstinputlisting}
@@ -297,6 +317,10 @@
 
     Input: Score between 0\ldots100\\
     Output: Print the corresponding grade.
+\end{frame}
+
+\begin{frame}{For Reviews and Previews}
+\href{https://github.com/swaroopch/byte-of-python}{Book}
 \end{frame}
 
 \end{document}
