--- a/lec01/lec01.tex
+++ b/lec01/lec01.tex
@@ -252,6 +252,11 @@
 \end{frame}
 
 \begin{frame}{Iterables}
+  How fast is $nums[3]$?\\
+  \href{https://stackoverflow.com/questions/23103690/why-is-accessing-any-single-element-in-an-array-done-in-constant-time-o1}{Why?}
+\end{frame}
+
+\begin{frame}{Iterables}
   \textcolor{black}{\large{Slicing}}
   \begin{lstinputlisting}
     {./subs.py}
